--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
+    "@astrojs/react": "^4.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.10.1",
+    "astro": "^5.13.7",
     "axios": "^1.10.0",
+    "phosphor-astro": "^2.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
