--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
     "axios": "^1.10.0",
+    "cntl": "^1.0.0",
     "phosphor-astro": "^2.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
