--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
